# gists

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  cabal.project  gists.cabal  minimise.hs  preamble.tex
coq/: PrismInj.v
css/: default.css  foundation.min.css
images-src/: Makefile  footer.mp  header.mp  lens-hierarchy.dot  lens-simple.dot  macros.mp  optic-affine-composition.mp  optic-affine-fold.mp  optic-affine-traversal-2.mp  optic-affine-traversal.mp  optic-fold.mp  optic-fold1.mp  optic-getter.mp  optic-icompose.mp  optic-identity.mp  optic-indexed.mp  optic-iso-flipped-1.mp  optic-iso-flipped-2.mp  optic-iso.mp  optic-lens-monoidal.mp  optic-lens.mp  optic-prim-getter.mp  optic-prim-review.mp  optic-prism-flipped.mp  optic-prism.mp  optic-review.mp  optic-setter.mp  optic-traversal.mp  optic-traversal1.mp  opticmacros.mp  optics-hierarchy.hs  optics-hierarchy.mp  profunctor-optics.mp
pkg/: gists-runnable.cabal
pkg/bench/: UnrolledFreeBench.hs
pkg/literate/: ColorsInLhs2TeX.lhs  LatexSVG.lhs  Squash.lhs
pkg/markdown/: AffineTraversal.lhs  ComposeGetterSetter.lhs  Flag.lhs  IndexedPoptics.lhs  MutatedLens.lhs  ReviewN.lhs  SingleFree.lhs  Table.lhs  TypeclassOptics.lhs
pkg/src/: Achromatic.lhs  CompilingLenses.lhs  DifferentDotty.lhs  FunctorOptics.lhs  Glassery.lhs  ListApi.lhs  NoAGetter.lhs
posts/: 2015-01-31-phantom-types.md  2015-09-07-binary-orphans.md  2015-09-15-single-element-type.md  2015-11-09-JuicyPixels-scale-dct.md  2016-05-10-monad-classes.md  2016-05-21-servant-swagger-ui.md  2016-06-12-lifted.md  2016-06-15-poly-nfdata.md  2016-06-16-existential-constraint.md  2016-07-01-overlapping-instances.md  2016-07-07-warp-http-client-unix-socket.md  2016-07-11-abstraction-evolution.md  2016-07-16-dependency-problem.md  2016-07-24-sop-diff.md  2017-01-17-linear-thoughts.md  2017-03-03-servant-and-db.lhs  2017-03-13-why-there-is-no-agetter.lhs  2017-03-15-solution-to-servant-type-indentation-problem.lhs  2017-03-20-affine-traversal.lhs  2017-03-31-compiling-lenses.lhs  2017-04-07-mutated-lens.lhs  2017-04-18-glassery.lhs  2017-04-26-indexed-poptics.lhs  2017-06-03-comments-on-whats-different-in-dotty.lhs  2017-06-16-alternative-exercises.md  2017-06-30-splitmix.md  2017-10-05-monoidal-vs-traversing.md  2017-11-17-composing-getter-and-setter.lhs  2017-11-21-fin-vec.md  2017-11-22-why-peano-and-not-typelits.md  2017-12-23-functor-optics.lhs  2018-01-08-haskell-package-qa.md  2018-02-21-single-free.lhs  2018-03-08-typeclass-optics.lhs  2018-03-28-achromatic-lens.md  2018-05-12-singleton-container.md  2018-05-28-squash.tex  2018-05-28-squash.tex.metadata  2018-06-19-prisms-are-constructors.md  2018-06-21-colors-in-lhs2tex.tex  (+88 more)
snippets/lattices-of-all-kinds/: .gitignore  Expo.agda  Makefile  Monotone.bib  cat-bool-m2.mps  cat-coprod-c.mps  cat-expo.mps  cat-prod-a.mps  cat-prod-b.mps  cat-prod-c.mps  lat-zho2zho-a.mps  lat-zho2zho.mps  lattice-bool-to-m2.dot  lattices-of-all-kinds.cabal
snippets/lattices-of-all-kinds/exe/: Main.hs
snippets/lattices-of-all-kinds/src/: HigherOrderRoles.lhs  Monotone.lhs
snippets/not-a-family-singleton/: Either.hs  Sing1.hs  Sing1i.hs  Sing1ii.hs  Take1.hs  Take2.hs  Take3.hs  Take3b.hs  not-a-family-singleton.cabal
src/: Site.hs
syntax/: cabal.xml
templates/: archive.html  default.html  index.html  post-list.html  post.html
