cabal-version:      2.2
name:               gists
version:            0
build-type:         Simple

synopsis:
  Oleg's gists: http://oleg.fi/gists/

description:
  Oleg's gists http://oleg.fi/gists/, the blog made with Hakyll.

category:           Hakyll
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE

executable site
  default-language: Haskell2010
  main-is:          Site.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  build-depends:
    , base                  ^>= 4.10
    , base-compat           ^>= 0.9.3
    , hakyll                ^>= 4.12
    , latex-formulae-hakyll ^>= 0.2.0.3
    , latex-formulae-pandoc ^>= 0.2.0.5
    , latex-formulae-image  ^>= 0.1.1.3
    , tagsoup
    , lens
    , pandoc                ^>= 2.1
    , skylighting           ^>= 0.7.1
    , containers
    , mtl

source-repository head
  type:      git
  location:  https://github.com/phadej/gists.git
