cabal-version: 2.2
name:          gists
version:       0
build-type:    Simple
synopsis:      Oleg's gists: https://oleg.fi/gists/
description:
  Oleg's gists https://oleg.fi/gists/, the blog made with Hakyll.

category:      Hakyll
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
license-file:  LICENSE

executable site
  default-language: Haskell2010
  main-is:          Site.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  build-depends:
    , base              ^>=4.12
    , base-compat       ^>=0.11.1
    , containers
    , hakyll            ^>=4.13.0.0
    , latex-svg-hakyll  ^>=0.2
    , latex-svg-image   ^>=0.2
    , latex-svg-pandoc  ^>=0.2.1
    , lens
    , mtl
    , pandoc            ^>=2.7.3
    , pandoc-types      ^>=1.17.6.1
    , skylighting       ^>=0.8.3.2
    , tagsoup
    , text

source-repository head
  type:     git
  location: https://github.com/phadej/gists.git
