cabal-version:       2.2
name:                gists-runnable
version:             0

synopsis:            Package to build literate posts
description:
  Package to build literate posts.
  Not all posts are Literate Haskell though.

license:             CC-BY-SA-4.0
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg.Grenrus <oleg.grenrus@iki.fi>
category:            Experiments
build-type:          Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      markdown/
  ghc-options:         -Wall -pgmL markdown-unlit
  build-tool-depends:  markdown-unlit:markdown-unlit
  reexported-modules: 
    Squash
  exposed-modules:
    Achromatic
    TypeclassOptics
    SingleFree
    FunctorOptics
    ComposeGetterSetter
    AffineTraversal
    CompilingLenses
    DifferentDotty
    -- Glassery
    IndexedPoptics
    ListApi
    MutatedLens
    NoAGetter
  build-depends:
    gists-literate

  build-depends:
    base >=4.10 && <4.11,
    ghc-proofs ^>= 0.1.1,
    adjunctions,
    boring,
    constraints,
    containers,
    contravariant,
    criterion,
    data-default,
    deepseq,
    distributive,
    dump-core,
    fin,
    free,
    generics-sop,
    generic-lens,
    HUnit,
    invariant,
    kan-extensions,
    lens,
    linear,
    machines,
    mtl,
    pointed,
    profunctors,
    semigroupoids,
    servant-server,
    splitmix,
    tagged,
    text,
    these,
    transformers,
    writer-cps-mtl,
    QuickCheck,
    quickcheck-instances

library gists-literate
  default-language:    Haskell2010
  hs-source-dirs:      literate/
  exposed-modules:
    Squash
  build-depends:
    base ^>=4.10.1,
    constraints,
    boring,
    containers

executable unrolled-free-bench
  hs-source-dirs:      bench/
  default-language:    Haskell2010
  main-is:             UnrolledFreeBench.hs
  build-depends:       base, gists-runnable

source-repository head
  type:      git
  location:  https://github.com/phadej/gists.git
