cabal-version: 2.2
name:          gists-runnable
version:       0
synopsis:      Package to build literate posts
description:
  Package to build literate posts.
  Not all posts are Literate Haskell though.

license:       CC-BY-SA-4.0
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg.Grenrus <oleg.grenrus@iki.fi>
category:      Experiments
build-type:    Simple

library
  default-language:   Haskell2010
  hs-source-dirs:     markdown/
  ghc-options:        -Wall -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit -any

  -- "current" post first, so cabal new-repl does what we want :)
  exposed-modules:    Flag

  -- rest of the modules
  exposed-modules:
    Achromatic
    AffineTraversal
    CompilingLenses
    ComposeGetterSetter
    DifferentDotty
    FunctorOptics
    IndexedPoptics
    ListApi
    MutatedLens
    NoAGetter
    ReviewN
    SingleFree
    TypeclassOptics

  -- exposed-modules: Glassery

  reexported-modules:
    Squash,
    ColorsInLhs2TeX

  build-depends:      gists-literate
  build-depends:
    , adjunctions
    , base                  ^>=4.10
    , boring
    , constraints
    , containers
    , contravariant
    , criterion
    , data-default
    , deepseq
    , distributive
    , dump-core
    , fin
    , free
    , generic-lens
    , generics-sop
    , ghc-proofs            ^>=0.1.1
    , HUnit
    , invariant
    , kan-extensions
    , lens
    , linear
    , machines
    , mtl
    , OneTuple
    , Only
    , optparse-applicative
    , pointed
    , profunctors
    , QuickCheck
    , quickcheck-instances
    , semigroupoids
    , servant
    , servant-server
    , singleton-bool
    , splitmix
    , tagged
    , text
    , these
    , transformers
    , writer-cps-mtl

library gists-literate
  default-language: Haskell2010
  hs-source-dirs:   literate/
  exposed-modules:
    ColorsInLhs2TeX
    Squash

  build-depends:
    , base         ^>=4.10.1
    , boring
    , constraints
    , containers

executable unrolled-free-bench
  hs-source-dirs:   bench/
  default-language: Haskell2010
  main-is:          UnrolledFreeBench.hs
  build-depends:
    , base
    , gists-runnable

source-repository head
  type:     git
  location: https://github.com/phadej/gists.git
