cabal-version: 2.4
name:          lattices-of-all-kinds
version:       0

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Monotone, HigherOrderRoles
  build-depends:
    , base
    , containers
    , lattices    ==2
    , process
    , topograph

executable monotone
  default-language: Haskell2010
  hs-source-dirs:   exe
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , base
    , lattices-of-all-kinds
